--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/home/ravyu/.local/share/virtualenvs/notebooks-JTwKmQ8B/bin/python"
 }
