--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "C:\\Users\\Raphael\\.virtualenvs\\TIL-2020-oa6RrwB_\\Scripts\\python.exe"
 }
