--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,7 @@ tensorflow-datasets = "*"
 seaborn = "*"
 wordcloud = "*"
 scikit-multilearn = "*"
-opencv-python = "*"
+opencv-python = {path = "./opencv_python-4.2.0-cp36-cp36m-win_amd64.whl"}
 
 [requires]
 python_version = "3.6"
