--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ scikit-multilearn = "*"
 opencv-python = {path = "./opencv_python-4.2.0-cp36-cp36m-win_amd64.whl"}
 pypng = "*"
 opencv-contrib-python = "*"
+imutils = "*"
 
 [requires]
 python_version = "3.6"
