--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cycler==0.10.0
 cymem==2.0.3
 decorator==4.4.2
 defusedxml==0.6.0
+easydict==1.9
 entrypoints==0.3
 future==0.18.2
 gast==0.3.3
@@ -21,6 +22,7 @@ google-pasta==0.2.0
 grpcio==1.30.0
 h5py==2.10.0
 idna==2.9
+imageio==2.8.0
 importlib-metadata==1.6.1
 imutils==0.5.3
 ipykernel==5.3.0
@@ -44,6 +46,7 @@ mistune==0.8.4
 murmurhash==1.0.2
 nbconvert==5.6.1
 nbformat==5.0.7
+networkx==2.4
 notebook==6.0.3
 numpy==1.19.0
 oauthlib==3.1.0
@@ -71,10 +74,12 @@ pypng==0.0.20
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2020.1
+PyWavelets==1.1.1
 pyzmq==19.0.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
+scikit-image==0.17.2
 scikit-learn==0.23.1
 scipy==1.4.1
 Send2Trash==1.5.0
@@ -90,6 +95,7 @@ terminado==0.8.3
 testpath==0.4.4
 thinc==7.4.1
 threadpoolctl==2.1.0
+tifffile==2020.6.3
 torch==1.5.1
 torchvision==0.6.1
 tornado==6.0.4
@@ -101,4 +107,5 @@ wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
+yolov4==0.11.0
 zipp==3.1.0
